--- a/src/index.jade
+++ b/src/index.jade
@@ -20,7 +20,7 @@ html
         <a href="https://github.com/" target="_blank"> <img src="../images/GitHub-Mark-Light-120px-plus.png" alt="Github Logo" /> </a>
 
       section(data-bespoke-state='emphatic')
-        h1 Social Coding in GitHub
+        h1 WOI HATI-HATI WEB INI KENA HACK by@lamhotnababan 
 
       section(data-bespoke-state='emphatic')
         h2 Sejarah GitHub
